--- a/style.css
+++ b/style.css
@@ -1,4 +1,17 @@
-body {
-    background-color:tan;
-    font-size: 24px;
+.header {
+    color: white;
+    background-color:#1F2937;
+}
+.section-two {
+
+}
+.section-three {
+    background-color:#E5E7EB;
+}
+.section-four {
+    background-color:#3882F6;
+}
+.footer {
+    color: white;
+    background-color: #1F2937;
 }
