--- a/style.css
+++ b/style.css
@@ -1,17 +1,66 @@
-.header {
-    color: white;
-    background-color:#1F2937;
+body {
+    font-family: Arial, Helvetica, sans-serif;
 }
-.section-two {
+.section-one {
+    background-color: #1F2937;
+    color: #E5E7EB;
+    font-size: 18px;
+}
 
+.header {
+    display: flex;
 }
+
+.header a {
+    text-decoration: none;
+    color: #E5E7EB
+}
+
+.logo-text {
+    font-size: 24px;
+    color: #F9FAF8;
+}
+
+.hero {
+    display: flex;
+}
+
+.hero-header {
+    font-size: 48px;
+    color: #F9FAF8;
+}
+
+.section-two {
+    background-color: white;
+}
+.information-header {
+    font-size: 36px;
+}
+.section-two-boxes {
+    display: flex;
+    color:#1F2937;
+}
+
 .section-three {
-    background-color:#E5E7EB;
+    background-color: #E5E7EB;
 }
+
+.quote {
+    font-size: 36px;
+    color:#1F2937;
+    font-style: italic;
+}
+
 .section-four {
-    background-color:#3882F6;
+    background-color: #3882F6;
 }
+
 .footer {
     color: white;
     background-color: #1F2937;
+    text-align: center;
+}
+
+button {
+    background-color: #3882F6;
 }
