--- a/style.css
+++ b/style.css
@@ -1,5 +1,12 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    flex-direction: column;
+    margin: 0px;
+}
+.section-one, .section-two, .section-three, .section-four, .footer {
+    padding-left : 15%;
+    padding-right: 15%;
 }
 .section-one {
     background-color: #1F2937;
@@ -13,7 +20,8 @@ body {
 
 .header a {
     text-decoration: none;
-    color: #E5E7EB
+    color: #E5E7EB;
+    text-transform: lowercase;
 }
 
 .logo-text {
