--- a/style.css
+++ b/style.css
@@ -40,15 +40,31 @@ body {
 
 .section-two {
     background-color: white;
+    text-align: center;
 }
 .information-header {
     font-size: 36px;
 }
 .section-two-boxes {
     display: flex;
+    flex-wrap: wrap;
     color:#1F2937;
 }
-
+.section-two-boxes div {
+    display: flex;
+    flex-direction: column;
+    width: 100px;
+    flex-wrap: wrap;
+    margin: 16px;
+}
+.section-two-boxes img {
+    width: 100px;
+    height: 100px;
+    border-style:solid;
+    border-width: 3px;
+    border-radius: 12px;
+    border-color:#3882F6;
+}
 .section-three {
     background-color: #E5E7EB;
 }
