--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@ body {
     padding-right: 15%;
 }
 .section-one {
+    display: flex;
+    flex-direction: column;
     background-color: #1F2937;
     color: #E5E7EB;
     font-size: 18px;
@@ -16,12 +18,21 @@ body {
 
 .header {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.header a {
+.header-links {
+    display: flex;
+}
+
+.header a  {
+    display: flex;
+    justify-content: space-between;
     text-decoration: none;
     color: #E5E7EB;
     text-transform: lowercase;
+    margin: 12px;
 }
 
 .logo-text {
@@ -31,11 +42,24 @@ body {
 
 .hero {
     display: flex;
+    justify-content: space-between;
+    margin-top: 100px;
+    margin-bottom: 100px;
 }
 
 .hero-header {
     font-size: 48px;
     color: #F9FAF8;
+}
+
+.hero-image {
+    background-color: gray;
+    display: flex;
+    align-items: center;
+    flex: 0 1 auto;
+    min-width: 50%;
+    text-align: center;
+    margin-left: 50px;
 }
 
 .section-two {
@@ -81,11 +105,24 @@ body {
 }
 
 .footer {
-    color: white;
+    color: #F9FAF8;
     background-color: #1F2937;
     text-align: center;
 }
 
 button {
+    color: #F9FAF8;
     background-color: #3882F6;
+    border: none;
+    border-radius: 8px;
+    font-size: 18px;
+    font-weight: bold;
+    padding: 10px;
+    padding-left: 32px;
+    padding-right: 32px;
+}
+
+.section-four button {
+    border-style: solid;
+    border-color: #F9FAF8;
 }
