--- a/style.css
+++ b/style.css
@@ -97,6 +97,8 @@ body {
 .section-three {
     padding-left: 20%;
     padding-right: 20%;
+    padding-top: 100px;
+    padding-bottom: 100px;
     background-color: #E5E7EB;
 }
 
@@ -104,6 +106,15 @@ body {
     font-size: 36px;
     color:#1F2937;
     font-style: italic;
+    margin-bottom: 0px;
+}
+
+.quote-author {
+    display: flex;
+    justify-content: flex-end;
+    font-size: 18px;
+    font-weight: bold;
+    margin-top: 0px;
 }
 
 .section-four {
