--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Roboto, sans-serif;
     display: flex;
     flex-direction: column;
     margin: 0px;
@@ -71,7 +71,6 @@ body {
 }
 .information-header {
     font-size: 36px;
-    font-weight: 900;
 }
 .section-two-boxes {
     display: flex;
@@ -105,6 +104,7 @@ body {
 .quote {
     font-size: 36px;
     color:#1F2937;
+    font-weight: 300;
     font-style: italic;
     margin-bottom: 0px;
 }
@@ -112,7 +112,7 @@ body {
 .quote-author {
     display: flex;
     justify-content: flex-end;
-    font-size: 18px;
+    font-size: 24px;
     font-weight: bold;
     margin-top: 0px;
 }
