--- a/style.css
+++ b/style.css
@@ -66,6 +66,8 @@ body {
 .section-two {
     padding-left: 20%;
     padding-right: 20%;
+    padding-top: 24px;
+    padding-bottom: 70px;
     background-color: white;
     text-align: center;
 }
@@ -91,6 +93,7 @@ body {
     border-style:solid;
     border-width: 4px;
     border-radius: 12px;
+    margin-bottom: 10px;
     border-color:#3882F6;
 }
 .section-three {
@@ -118,11 +121,15 @@ body {
 }
 
 .section-four {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     background-color: #3882F6;
     border-radius: 8px;
     margin: 70px;
     margin-left: 15%;
     margin-right: 15%;
+    padding: 20px;
     padding-left: 5%;
     padding-right: 5%;
 }
