--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ body {
     background-color: #1F2937;
     color: #E5E7EB;
     font-size: 18px;
-    padding-left: 15%;
-    padding-right: 15%;
+    padding-left: 12%;
+    padding-right: 12%;
 }
 
 .header {
@@ -127,9 +127,9 @@ body {
     background-color: #3882F6;
     border-radius: 8px;
     margin: 70px;
-    margin-left: 15%;
-    margin-right: 15%;
-    padding: 50px;
+    margin-left: 12%;
+    margin-right: 12%;
+    padding: 8%;
 }
 .call-to-action {
     display: flex;
