--- a/style.css
+++ b/style.css
@@ -130,6 +130,8 @@ body {
     margin-left: 12%;
     margin-right: 12%;
     padding: 8%;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 .call-to-action {
     display: flex;
